actualizacion provincias cantones

--- a/app/assests/languages/es-ES/canton.json
+++ b/app/assests/languages/es-ES/canton.json
@@ -1,7 +1,7 @@
 {
 	"canton" : {
             "home": {
-                "title": "Cantones",
+                "title": "Cantones de la provincia {{name}}",
                 "createLabel": "Crear Cantón",
                 "createOrEditLabel": "Crear or editar Cantón"
             },
